Bug 1550771 - Deadlock in SharedMemoryBasic_mach triggered by AV1 playback r=jld a=jcristau

Don't hold gMutex when calling HandleSharePortsMessage() from PortServerThread to avoid deadlock.

Differential Revision: https://phabricator.services.mozilla.com/D31694